--- a/src/index.html
+++ b/src/index.html
@@ -105,5 +105,6 @@
         </div>
     </div>
     <script src="js/calculadora.js"></script>
+    <script src="js/mycalc.js"></script>
     <script src="js/util.js"></script>
   </body>
