Configuração inicial do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -93,11 +93,16 @@
                                 type="button" 
                                 class="btn btn-success kz-btn" 
                                 onclick="calcular()">=</button>
-                            <button 
+                             <button
+                                type = "button"
+                                class = "btn btn-success kz-btn"
+                                onclick= "definirOperacao('^')">^</button>
+                             <button 
                                 type="button" 
                                 class="btn btn-warning kz-btn" 
                                 onclick="definirOperacao('+')">+</button>
-                        </div>
+                    
+                            <div>
                     </form>
                     <br />
                 </div>
